--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ nav ul li a.highlighted:hover::after {
 
 .contact-links {
     display: block;
-    text-align: center;
+    text-align: left;
     max-width: 500px;
     margin: 0 auto;
 }
